--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,17 @@
     },
     "require": {
         "php": ">=7.0",
-        "symfony/framework-bundle": "^3.0|^4.0",
-        "doctrine/orm": "^2.5",
+        "ext-json": "^1.6",
+        "doctrine/orm": "^2.6",
+        "friendsofsymfony/jsrouting-bundle": "^1.6|^2.0",
+        "friendsofsymfony/elastica-bundle": "^5.0",
+        "twig/extensions": "^1.5",
+        "twig/twig": "^2.5",
+        "symfony/translation": "^4.1",
         "symfony/options-resolver": "^3.0|^4.0",
         "symfony/property-access": "^3.0|^4.0",
-        "friendsofsymfony/jsrouting-bundle": "^1.6|^2.0",
-        "friendsofsymfony/elastica-bundle": "^5.0"
+        "symfony/framework-bundle": "^3.0",
+        "symfony/security-core": "^4.1"
     },
     "autoload": {
         "psr-4": { "Sg\\DatatablesBundle\\": "" }
