--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "friendsofsymfony/elastica-bundle": "^5.0",
         "twig/extensions": "^1.5",
         "twig/twig": "^2.5",
-        "symfony/translation": "^4.1",
+        "symfony/translation": "~2.7|~3.0|~4.0",
         "symfony/options-resolver": "^3.0|^4.0",
         "symfony/property-access": "^3.0|^4.0",
         "symfony/framework-bundle": "^3.0",
