--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "symfony/options-resolver": "^3.0|^4.0",
         "symfony/property-access": "^3.0|^4.0",
         "symfony/framework-bundle": "^3.0",
-        "symfony/security-core": "^4.1"
+        "symfony/security-bundle": "~2.1|~3.0"
     },
     "autoload": {
         "psr-4": { "Sg\\DatatablesBundle\\": "" }
