--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": ">=7.0",
         "ext-json": "^1.4",
-        "doctrine/orm": "^2.6",
+        "doctrine/orm": "~2.2",
         "friendsofsymfony/jsrouting-bundle": "^1.6|^2.0",
         "friendsofsymfony/elastica-bundle": "^5.0",
         "twig/extensions": "^1.5",
