--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "friendsofsymfony/jsrouting-bundle": "^1.6|^2.0",
         "friendsofsymfony/elastica-bundle": "^5.0",
         "twig/extensions": "^1.5",
-        "twig/twig": "^2.5",
+        "twig/twig": "^1.28 || ^2.0",
         "symfony/translation": "~2.7|~3.0|~4.0",
         "symfony/options-resolver": "^3.0|^4.0",
         "symfony/property-access": "^3.0|^4.0",
